# maze-solver-with-python

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
docs/: api.rst  conf.py  development.rst  index.rst  usage.rst
maze_solver_with_python/: __main__.py
maze_solver_with_python/core/: models.py
maze_solver_with_python/tests/: test_maze.py
scripts/: build_exe.sh  main.sh  screenshot.py  test.sh
