[project]
name = "maze_solver_with_python"
version = "0.1.0"
description = "A maze generator and solver built with Python and tkinter."
authors = [{ name = "Nhat Tai NGUYEN", email = "nhattai.nguyen88@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = []

[project.scripts]
maze = "maze_solver_with_python.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maze_solver_with_python"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
exclude = [".git", ".venv"]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pylint.MAIN]
ignore = [".venv"]

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "useless-import-alias",
    "protected-access",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
